--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
    <section>
       <h2>Чем мы занимаемся</h2>
       <ul>
-          <li><img src="img/img-1.jpg" alt="picture" width="250"></li>
-          <li> <img src="img/img-2.jpg" alt="picture" width="250"> </li>    
-          <li> <img src="img/img-3.jpg" alt="picture" width="250"> </li>  
+          <li><img src="images/img-1.jpg" alt="picture" width="250"></li>
+          <li> <img src="images/img-2.jpg" alt="picture" width="250"> </li>    
+          <li> <img src="images/img-3.jpg" alt="picture" width="250"> </li>  
       </ul>
    </section>
     
@@ -56,22 +56,22 @@
       <h2>Наша команда</h2>
       <ul>
           <li>
-              <img src="img/img1.jpg" alt="photo" width="270">
+              <img src="images/img1.jpg" alt="photo" width="270">
               <h3>Игорь Демьяненко</h3>
               <p>Product Designer</p> 
           </li>
           <li>
-              <img src="img/img2.jpg" alt="photo" width="270">
+              <img src="images/img2.jpg" alt="photo" width="270">
               <h3>Ольга Репина</h3>
               <p>Frontend Developer</p>
           </li>
           <li>
-              <img src="img/img3.jpg" alt="photo" width="270">
+              <img src="images/img3.jpg" alt="photo" width="270">
               <h3>Николай Тарасов</h3>
               <p>Marketing</p>  
           </li>
           <li>
-              <img src="img/img4.jpg" alt="photo" width="270">
+              <img src="images/img4.jpg" alt="photo" width="270">
               <h3>Михаил Ермаков</h3>
               <p>UI Designer</p> 
           </li>
