--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
   </main>  
 
   <footer> WebStudio
-    <address>
-   <div> г. Киев, пр-т Леси Украинки, 26
-    info@example.com
+   <address>
+   <div> г. Киев, пр-т Леси Украинки, 26<br/>
+    info@example.com <br/>
     +38 099 111 11 11</div>
     </address>
   </footer>
