--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 <body>
     <!--Шапка-->
  <header>
-      <div>
        <a href="">WebStudio</a>
        <nav>
            <ul>
@@ -23,15 +22,15 @@
            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
        </ul> 
-      </div>
  </header>   
 
    <!--Главный контент-->
  <main>    
-    <div><h1>Эффективные решения для вашего бизнеса</h1>
-    <button type="button">Заказать услугу</button></div>   
+    <section><h1>Эффективные решения для вашего бизнеса</h1>
+    <button type="button">Заказать услугу</button></section>   
     <!--Особенности-->
-    <ul>
+    <section>
+      <ul>
         <li><h3>Внимание к деталям</h3>
             <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p></li>
         <li><h3>Пунктуальность</h3>
@@ -40,14 +39,15 @@
             <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p></li>
         <li><h3>Современные технологии</h3>
             <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p></li>
-    </ul>
+      </ul>
+    </section>
     <!--Чем мы занимаемся-->
    <section>
       <h2>Чем мы занимаемся</h2>
       <ul>
-          <li><img src="images/img-1.jpg" alt="picture" width="250"></li>
-          <li> <img src="images/img-2.jpg" alt="picture" width="250"> </li>    
-          <li> <img src="images/img-3.jpg" alt="picture" width="250"> </li>  
+          <li><img src="images/img-1.jpg" alt="picture" width="370"></li>
+          <li> <img src="images/img-2.jpg" alt="picture" width="370"> </li>    
+          <li> <img src="images/img-3.jpg" alt="picture" width="370"> </li>  
       </ul>
    </section>
     
@@ -78,14 +78,15 @@
      </ul>
    </section>
   </main>  
-
-  <footer> WebStudio
+  <footer> 
+   <a href="">WebStudio</a>
    <address>
-   <div> г. Киев, пр-т Леси Украинки, 26<br/>
-    info@example.com <br/>
-    +38 099 111 11 11</div>
+   г. Киев, пр-т Леси Украинки, 26<br/> 
+    <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li><br/>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+    </ul>
     </address>
   </footer>
-
 </body>
 </html>
